# rust-url

./: Cargo.toml  Makefile
.github/workflows/: ci.yml
_url/: Cargo.toml
_url/src/: lib.rs
url/: Cargo.toml
url/src/: host.rs  lib.rs  origin.rs  parser.rs  slicing.rs
url/src/net/: de.rs  mod.rs
