[package]
name = "url-fork"
version = "3.0.1"
edition = "2021"
description = "Fork of url crate with no_std support"
homepage = "https://github.com/yukibtc/rust-url"
repository = "https://github.com/yukibtc/rust-url.git"
license = "MIT OR Apache-2.0"
rust-version = "1.56"
readme = "../README.md"
keywords = ["url", "parser", "no_std"]
categories = ["parser-implementations", "web-programming", "encoding"]

[package.metadata.docs.rs]
features = ["serde"]
rustdoc-args = ["--generate-link-to-definition"]

[package.metadata.playground]
features = ["serde"]

[features]
default = ["std"]
std = ["form_urlencoded/std", "idna/std", "percent-encoding/std", "serde/std"]
# Expose internal offsets of the URL.
expose_internals = []

[dependencies]
form_urlencoded = { version = "1.2", default-features = false, features = ["alloc"] }
idna = { version = "0.5", default-features = false, features = ["alloc"] }
percent-encoding = { version = "2.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, optional = true, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_test = "1"
